--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,9 @@
   <artifactId>angularjs</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  
+  <properties>
+  	<spring.version>4.2.2.RELEASE</spring.version>
+  </properties>
   <dependencies>
   	<dependency>
         <groupId>javax.servlet</groupId>
@@ -12,6 +14,32 @@
         <version>4.0.0-b01</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.8</version>
+		</dependency>
+		<dependency>
+		  <groupId>commons-logging</groupId>
+		  <artifactId>commons-logging</artifactId>
+		  <version>1.2</version>
+		</dependency>
+		<!-- spring start -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
   </dependencies>
   <build>
   	<plugins>
