--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "amd-optimize": "^0.6.1",
     "del": "^2.2.2",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^1.12.0",
